feat: Create, GetById, GetList, Search, Update, Delete methods definition and bodiless implementation
